fix: gap of title in services section

--- a/styles/services.css
+++ b/styles/services.css
@@ -13,6 +13,7 @@
 
         &>div {
             text-align: center;
+            gap: 8px;
         }
 
         &>ul {
